--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,12 @@ Changelog
 
 (name of developer listed in brackets)
 
+3.2.0 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 3.1.2 (2012-08-14)
 ------------------
 
