--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,11 @@ Changelog
 
 (name of developer listed in brackets)
 
+3.1.3 (xxxx-xx-xx)
+------------------
+- Set filename properly [foreverchild]
+- Use IFileNameNormalizer instead of CMFPlone.utils.normalizeString [foreverchild]
+
 3.1.2 (2012-08-14)
 ------------------
 
