--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -7,6 +7,7 @@ Changelog
 ------------------
 
 - Use IFileNameNormalizer instead of CMFPlone.utils.normalizeString [foreverchild]
+- Dexterity compatibility. Tested with types from plone.app.contenttypes [rafaelbco]
 
 3.1.2 (2012-08-14)
 ------------------
