--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,11 @@ Changelog
 
 (name of developer listed in brackets)
 
+TBD
+---
+- Python 3 compatiility [fulv]
+- Plone 5.x compatibility [fulv]
+
 3.1.3 (xxxx-xx-xx)
 ------------------
 - Set filename properly [foreverchild]
